--- a/src/app/cart/cart-list/cart-list.component.html
+++ b/src/app/cart/cart-list/cart-list.component.html
@@ -2,20 +2,19 @@
   <mat-toolbar color="warn">
     <mat-toolbar-row>
       <span class="cart-title">Cart</span>
-      <div class="cart-counter" *ngIf='products?.length > 0'>
-        <button mat-mini-fab color='primary'>{{ products.length }}</button>
+      <div class="cart-counter" *ngIf='items?.length > 0'>
+        <button mat-mini-fab color='primary'>{{ items.length }}</button>
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
   <mat-card class="cart-card">
     <mat-card-content>
-      <div *ngIf='products?.length > 0; else emptyCart'>
+      <div *ngIf='items?.length > 0; else emptyCart'>
         <p>Products:</p>        
         <mat-list>
-          <mat-list-item *ngFor='let product of products'>
-            {{ product.name }} - {{ product.price }}$
-          </mat-list-item>
+          <app-cart-item *ngFor='let item of items' [item]="item" (onQuantityChange)="cartService.changeQuantity($event.item, $event.quantity)"></app-cart-item>
         </mat-list>
+        <span>Total: {{total}}$</span>
       </div>
       <ng-template #emptyCart>Cart is empty...</ng-template>
     </mat-card-content>
